@@ -1,3 +1,10 @@
+Thu Oct 14 22:43:22 PDT 2004 William Brack <wbrack@mmm.com.hk>
+
+	* configure.in, config.h.in, libexslt/date.c: changed date.c to use
+	  gmtime_r if available (bug 129983)
+	* libexslt/functions.c: fixed a namespace problem concerning a
+	  function with a namespace-qualified name (bug 155197)
+
 Tue Oct 12 03:54:44 CEST 2004 Daniel Veillard <daniel@veillard.com>
 
 	* libxslt/namespaces.c: fixed a bug in namespace lookup exhibited
